Ahora "Vídeos más vistos" y "Vídeos más populares" se cargan por JS

--- a/index.html
+++ b/index.html
@@ -48,31 +48,7 @@
         <section id="vistos">
           <h2>Videos más vistos</h2>
           <div class="container">
-            <div class="row justify-content-center">
-              <div class="col">
-                <figure>
-                  <img src="https://i.ytimg.com/vi/arHwjrfIT-M/hqdefault.jpg" alt="Vista previa del vídeo llamado [Video C] 바닷물에 잠긴 부산 해운대 마린시티">
-                 <figcaption><h6 itemprop="name">[Video C] 바닷물에 잠긴 부산 해운대 마린시티</h6></figcaption>
-               </figure>
-              </div>
-              <div class="col">
-                <figure>
-                  <img src="https://i.ytimg.com/vi/g83ppI9kqq8/hqdefault.jpg" alt="Vista previa del vídeo llamado リンカーン芸人大運動会2016 2016.10.05">
-                  <figcaption><h6 itemprop="name">リンカーン芸人大運動会2016 2016.10.05</h6></figcaption>
-               </figure>
-              </div>
-              <div class="col">
-                <figure>
-                  <img src="https://i.ytimg.com/vi/2xhPzlwrNvw/hqdefault.jpg" alt="Vista previa del vídeo llamado 【ゆっくり茶番】殺人パン！？ゆっくり達の文化祭 #1！【たくっち】">
-                  <figcaption><h6 itemprop="name">【ゆっくり茶番】殺人パン！？ゆっくり達の文化祭 #1！【たくっち】</h6></figcaption>
-               </figure>
-              </div>
-              <div class="col">
-                <figure>
-                  <img src="https://i.ytimg.com/vi/IBoOaAVpW2U/hqdefault.jpg" alt="Vista previa del vídeo llamado 【マインクラフト】ガチャガチャ作ってみた！当たるかな!?【ヒカキンのマイクラ実況 Part253】【ヒカクラ】">
-                  <figcaption><h6 itemprop="name">【マインクラフト】ガチャガチャ作ってみた！当たるかな!?【ヒカキンのマイクラ実況 Part253】【ヒカクラ】</h6></figcaption>
-               </figure>
-              </div>
+            <div class="row justify-content-center" id="vistosRow">
             </div>
           </div>
           <a class="home" href="#header" title="Ver los resultados">Subir</a>
@@ -81,31 +57,7 @@
         <section id="populares">
           <h2>Videos más populares</h2>
           <div class="container">
-            <div class="row justify-content-center">
-              <div class="col">
-                <figure>
-                  <img src="https://i.ytimg.com/vi/kwJYhK9ZeX4/hqdefault.jpg" alt="Vista previa del vídeo llamado EL PSICÓLOGO LOCO">
-                  <figcaption><h6 itemprop="name">EL PSICÓLOGO LOCO</h6></figcaption>
-               </figure>
-              </div>
-              <div class="col">
-                <figure>
-                  <img src="https://i.ytimg.com/vi/ZRmnVxSzJX8/hqdefault.jpg" alt="Vista previa del vídeo llamado EL AGENTE 87 (Broma telefónica)">
-                  <figcaption><h6 itemprop="name">EL AGENTE 87 (Broma telefónica)</h6></figcaption>
-               </figure>
-              </div>
-              <div class="col">
-                <figure>
-                  <img src="https://i.ytimg.com/vi/kSHReKGK_VY/hqdefault.jpg" alt="Vista previa del vídeo llamado ¡Gran rajada de 'Pichu' Cuéllar contra un periodista! ¡Sin palabras!">
-                  <figcaption><h6 itemprop="name">¡Gran rajada de 'Pichu' Cuéllar contra un periodista! ¡Sin palabras!</h6></figcaption>
-               </figure>
-              </div>
-              <div class="col">
-                <figure>
-                  <img src="https://i.ytimg.com/vi/qlhzKJZ-SbU/hqdefault.jpg" alt="Vista previa del vídeo llamado AQUÍ ESTA MI NUEVO CANAL!! KOKO DC">
-                  <figcaption><h6 itemprop="name">AQUÍ ESTA MI NUEVO CANAL!! KOKO DC</h6></figcaption>
-               </figure>
-              </div>
+            <div class="row justify-content-center" id="popularesRow">
             </div>
           </div>
           <a class="home" href="#header" title="Ver los resultados">Subir</a>
