--- a/index.html
+++ b/index.html
@@ -1,20 +1,42 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PW_Práctica final</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link rel="stylesheet" type="text/css" href="styles/media.css">
     <script src="scripts/main.js"></script>
   </head>
   <body>
 
-    <header id="header" class="navbar navbar-default">
+    <nav id="header" class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="#"><h1>Video App</h1></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <form class="navbar-form navbar-left">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+
+        <div class="btn-group float-right">
+          <button type="button" class="btn btn-primary">Videos</button>
+          <button type="button" class="btn btn-primary">Top Videos</button>
+          <button type="button" class="btn btn-primary">Top Popular</button>
+        </div>
+
+      </div>
+    </nav>
+
+
+    <!--<header id="header" class="navbar navbar-default">
 
           <div class="container-fluid">
             <div class="navbar-header">
@@ -33,7 +55,7 @@
               <button type="button" class="btn btn-primary">Top Videos</button>
               <button type="button" class="btn btn-primary">Top Popular</button>
             </div>
-          </div>
+          </div>-->
 
         </header>
 
@@ -48,7 +70,31 @@
         <section id="vistos">
           <h2>Videos más vistos</h2>
           <div class="container">
-            <div class="row justify-content-center" id="vistosRow">
+            <div class="row justify-content-center">
+              <div class="col">
+                <figure>
+                  <img src="https://i.ytimg.com/vi/arHwjrfIT-M/hqdefault.jpg" alt="Vista previa del vídeo llamado [Video C] 바닷물에 잠긴 부산 해운대 마린시티">
+                 <figcaption><h6 itemprop="name">[Video C] 바닷물에 잠긴 부산 해운대 마린시티</h6></figcaption>
+               </figure>
+              </div>
+              <div class="col">
+                <figure>
+                  <img src="https://i.ytimg.com/vi/g83ppI9kqq8/hqdefault.jpg" alt="Vista previa del vídeo llamado リンカーン芸人大運動会2016 2016.10.05">
+                  <figcaption><h6 itemprop="name">リンカーン芸人大運動会2016 2016.10.05</h6></figcaption>
+               </figure>
+              </div>
+              <div class="col">
+                <figure>
+                  <img src="https://i.ytimg.com/vi/2xhPzlwrNvw/hqdefault.jpg" alt="Vista previa del vídeo llamado 【ゆっくり茶番】殺人パン！？ゆっくり達の文化祭 #1！【たくっち】">
+                  <figcaption><h6 itemprop="name">【ゆっくり茶番】殺人パン！？ゆっくり達の文化祭 #1！【たくっち】</h6></figcaption>
+               </figure>
+              </div>
+              <div class="col">
+                <figure>
+                  <img src="https://i.ytimg.com/vi/IBoOaAVpW2U/hqdefault.jpg" alt="Vista previa del vídeo llamado 【マインクラフト】ガチャガチャ作ってみた！当たるかな!?【ヒカキンのマイクラ実況 Part253】【ヒカクラ】">
+                  <figcaption><h6 itemprop="name">【マインクラフト】ガチャガチャ作ってみた！当たるかな!?【ヒカキンのマイクラ実況 Part253】【ヒカクラ】</h6></figcaption>
+               </figure>
+              </div>
             </div>
           </div>
           <a class="home" href="#header" title="Ver los resultados">Subir</a>
@@ -57,7 +103,31 @@
         <section id="populares">
           <h2>Videos más populares</h2>
           <div class="container">
-            <div class="row justify-content-center" id="popularesRow">
+            <div class="row justify-content-center">
+              <div class="col">
+                <figure>
+                  <img src="https://i.ytimg.com/vi/kwJYhK9ZeX4/hqdefault.jpg" alt="Vista previa del vídeo llamado EL PSICÓLOGO LOCO">
+                  <figcaption><h6 itemprop="name">EL PSICÓLOGO LOCO</h6></figcaption>
+               </figure>
+              </div>
+              <div class="col">
+                <figure>
+                  <img src="https://i.ytimg.com/vi/ZRmnVxSzJX8/hqdefault.jpg" alt="Vista previa del vídeo llamado EL AGENTE 87 (Broma telefónica)">
+                  <figcaption><h6 itemprop="name">EL AGENTE 87 (Broma telefónica)</h6></figcaption>
+               </figure>
+              </div>
+              <div class="col">
+                <figure>
+                  <img src="https://i.ytimg.com/vi/kSHReKGK_VY/hqdefault.jpg" alt="Vista previa del vídeo llamado ¡Gran rajada de 'Pichu' Cuéllar contra un periodista! ¡Sin palabras!">
+                  <figcaption><h6 itemprop="name">¡Gran rajada de 'Pichu' Cuéllar contra un periodista! ¡Sin palabras!</h6></figcaption>
+               </figure>
+              </div>
+              <div class="col">
+                <figure>
+                  <img src="https://i.ytimg.com/vi/qlhzKJZ-SbU/hqdefault.jpg" alt="Vista previa del vídeo llamado AQUÍ ESTA MI NUEVO CANAL!! KOKO DC">
+                  <figcaption><h6 itemprop="name">AQUÍ ESTA MI NUEVO CANAL!! KOKO DC</h6></figcaption>
+               </figure>
+              </div>
             </div>
           </div>
           <a class="home" href="#header" title="Ver los resultados">Subir</a>
