--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
               <a class="navbar-brand" href="#"><h1>Video App</h1></a>
             </div>
 
-            <form class="navbar-form navbar-left">
+            <div id="barra" class="navbar-form navbar-left">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
+                <input id="buscador" type="text" class="form-control" placeholder="Search">
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+              <button onclick="searchVideos()" type="button" class="btn btn-primary">Submit</button>
+            </div>
 
             <div class="btn-group">
               <button type="button" class="btn btn-primary">Videos</button>
@@ -37,10 +37,11 @@
 
         </header>
 
-        <section id="resultados">
+        <section id="resultados" style="display: none">
           <h2>Resultados de la búsqueda</h2>
           <ul class="videos">
-
+            <div class="row justify-content-center" id="searchRow">
+            </div>
           </ul>
           <a class="home" href="#header" title="Ver los resultados">Subir</a>
         </section>
