--- a/index.html
+++ b/index.html
@@ -14,28 +14,29 @@
   </head>
   <body>
 
-    <header id="header" class="navbar navbar-default">
+    <header id="header" class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="#"><h1>Video App</h1></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-          <div class="container-fluid">
-            <div class="navbar-header">
-              <a class="navbar-brand" href="#"><h1>Video App</h1></a>
-            </div>
+      <div class="collapse navbar-collapse row justify-content-end" id="navbarSupportedContent">
 
-            <div id="barra" class="navbar-form navbar-left">
-              <div class="form-group">
-                <input id="buscador" type="text" class="form-control" placeholder="Search">
-              </div>
-              <button onclick="searchVideos()" type="button" class="btn btn-primary">Submit</button>
-            </div>
-
-            <div class="btn-group">
-              <button type="button" class="btn btn-primary">Videos</button>
-              <button type="button" class="btn btn-primary">Top Videos</button>
-              <button type="button" class="btn btn-primary">Top Popular</button>
-            </div>
+        <div id="barra" class="navbar-form navbar-left col">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
           </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
 
-        </header>
+        <div id="links" class="btn-group col">
+          <button type="button" class="btn btn-primary">Videos</button>
+          <button type="button" class="btn btn-primary">Top Videos</button>
+          <button type="button" class="btn btn-primary float-right">Top Popular</button>
+        </div>
+
+      </div>
+    </header>
 
         <section id="resultados" style="display: none">
           <h2>Resultados de la búsqueda</h2>
