video canviat i butons funcionals

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </div>
 
         <div id="links" class="btn-group col">
-          <button type="button" class="btn btn-primary">Videos</button>
-          <button type="button" class="btn btn-primary">Top Videos</button>
-          <button type="button" class="btn btn-primary float-right">Top Popular</button>
+          <a class="btn btn-light" href="#resultados" role="button">Videos</a>
+          <a class="btn btn-light" href="#vistos" role="button">Top Videos</a>
+          <a class="btn btn-light float-right" href="#populares" role="button">Top Popular</a>
         </div>
 
       </div>
