--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         </div>
 
         <div class="collapse" id="collapseExample">
-          <form id="formmenu" class="navbar-form">
+          <div id="formmenu" class="navbar-form">
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Search">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
+          </div>
 
           <div id="btnmenu" class="btn-group">
             <a class="btn btn-light" href="#resultados" role="button">Videos</a>
