abans de canvi de navbar

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
         <div id="formesc" class="navbar-form navbar-left">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" class="form-control" placeholder="Search" id="buscador">
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary" onclick="searchVideos()">Buscar</button>
         </div>
 
         <button id="menu" class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
@@ -41,7 +41,7 @@
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Search">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" onclick="searchVideos()">Buscar</button>
           </div>
 
           <div id="btnmenu" class="btn-group">
