--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PW_Práctica final</title>
+    <title>2017/12/12</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link rel="stylesheet" type="text/css" href="styles/media.css">
@@ -35,7 +35,6 @@
             <!-- Links -->
             <div id="btns">
               <a class="btn btn-light float-right" href="#resultados" role="button">Videos</a>
-              <a class="btn btn-light float-right" href="#vistos" role="button">Top Videos</a>
               <a class="btn btn-light float-right" href="#populares" role="button">Top Popular</a>
             </div>
           </form>
@@ -48,13 +47,6 @@
       <section id="resultados" style="display: none">
         <h2>Resultados de la búsqueda</h2>
         <div class="row justify-content-center" id="searchRow">
-        </div>
-        <a class="home" href="#header" title="Ver los resultados">Subir</a>
-      </section>
-
-      <section id="vistos">
-        <h2>Videos más vistos</h2>
-        <div class="row justify-content-center" id="vistosRow">
         </div>
         <a class="home" href="#header" title="Ver los resultados">Subir</a>
       </section>
